welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:18: error: not found: value elemnt
    for (i<-1 to T(elemnt-1)){
                   ^golomb:17: error: type mismatch;
 found   : Unit
 required: Int
  while (T(num-1)==0){
  ^